# probably-average-computer-emulator-32

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  cmake-multi-platform.yml  cmake-pico.yml
ci/: .config
core/: ATAController.cpp  ATAController.h  CMakeLists.txt  CPU.cpp  CPU.h  FloppyController.cpp  FloppyController.h  GCCBuiltin.h  GamePort.h  QEMUConfig.cpp  QEMUConfig.h  RAMFunc.h  System.cpp  System.h  VGACard.cpp  VGACard.h
esp32/: CMakeLists.txt  Display.cpp  Display.h  Main.cpp  PortTimer.h  Storage.cpp  Storage.h  USB.cpp  bios.cmake  config.h  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32p4  setup.cmake  stub.c
mcu-shared/: CMakeLists.txt  KeyMap.h
minsdl/: CMakeLists.txt  DiskIO.cpp  DiskIO.h  Main.cpp
pico-shared/: CMakeLists.txt  DiskIO.cpp  DiskIO.h  KeyMap.cpp  Storage.cpp  USBHID.cpp
pico2/: CMakeLists.txt  Display_dpi.cpp  Display_hstx.cpp  Main.cpp  PortTimer.h  RemoteIO.cpp  RemoteIO.h  RemoteMain.cpp  config.h  ffconf.h  memmap.ld
pico2/driver/: config.h  wifi_nina.cpp  wifi_nina.h
pico2/driver/i2c/: seesaw.cpp
pico2/i2c/: seesaw.cpp
